# LocalAIwithOllamaCompanionToolkit

full_code/management_cli/: config.py  main.py  mycli.py  pyproject.toml  smoke.py
full_code/repl/: repl_with_long_memory.py  repl_with_tools.py  repl_with_trimming.py
