[project]
name = "ollama-basics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ollama==0.6.2",
    "python-dotenv>=1.2.2",
]

[project.scripts]
mycli = "mycli:main"

[tool.uv]
package = true

[tool.setuptools]
py-modules = ["mycli", "config", "smoke"]
